# api-autenticacao-jwt-django

./: .coverage  .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-db-only.yml  docker-compose.ci.yml  docker-compose.yaml  gitlab-ci.yml  pyproject.toml  pytest.ini  requirements.txt
apps/contas/: admin.py  apps.py
apps/contas/api/: serializers.py  urls.py
apps/contas/api/views/: __init__.py  autenticacao.py  cadastro.py  email.py  monitoramento.py  perfil.py  senha.py
apps/contas/migrations/: 0001_initial.py
apps/contas/models/: __init__.py  ativacao_conta.py  perfil_usuario.py  usuario.py
apps/contas/tests/: factories.py  test_ativacao_conta_model.py  test_cadastro_api.py  test_perfil_usuario_model.py  test_usuario_model.py
apps/logs/: admin.py  models.py  utils.py
apps/logs/migrations/: 0001_initial.py
contas/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
contas/migrations/: 0001_initial.py  0002_alter_ativacaoconta_options_and_more.py  0003_perfilusuario_avatar_url_alter_perfilusuario_avatar.py  0004_remove_perfilusuario_avatar_url_and_more.py
contas/swagger/: swagger_contas.py
core/: settings.py  urls.py
core/conf/development/: settings.py
core/conf/production/: settings.py
core/email_templates/: email_utils.py  templates.py
core/settings/: __init__.py  development.py  production.py
docs/swagger/: contas.py  helpers.py  security.py
